@@ -56,9 +56,8 @@
 namespace fastonosql {
 namespace proxy {
 
-IConnectionSettingsBase* ConnectionSettingsFactory::CreateFromType(
-    core::connectionTypes type,
-    const connection_path_t& conName) {
+IConnectionSettingsBase* ConnectionSettingsFactory::CreateFromType(core::connectionTypes type,
+                                                                   const connection_path_t& conName) {
 #ifdef BUILD_WITH_REDIS
   if (type == core::REDIS) {
     return new redis::ConnectionSettings(conName);
@@ -129,14 +128,13 @@ IConnectionSettingsBase* ConnectionSettingsFactory::CreateFromString(const std::
         if (common::ConvertFromString(elText, &msTime)) {
           result->SetLoggingMsTimeInterval(msTime);
         }
-        if (IsLocalType(result->Type())) {
+        if (!IsCanSSHConnection(result->Type())) {
           result->SetCommandLine(val.substr(i + 1));
           break;
         }
       } else if (commaCount == 3) {
         result->SetCommandLine(elText);
-        if (IConnectionSettingsRemoteSSH* remote =
-                dynamic_cast<IConnectionSettingsRemoteSSH*>(result)) {
+        if (IConnectionSettingsRemoteSSH* remote = dynamic_cast<IConnectionSettingsRemoteSSH*>(result)) {
           core::SSHInfo sinf(val.substr(i + 1));
           remote->SetSSHInfo(sinf);
         }
@@ -151,10 +149,9 @@ IConnectionSettingsBase* ConnectionSettingsFactory::CreateFromString(const std::
   return result;
 }
 
-IConnectionSettingsRemote* ConnectionSettingsFactory::CreateFromType(
-    core::connectionTypes type,
-    const connection_path_t& conName,
-    const common::net::HostAndPort& host) {
+IConnectionSettingsRemote* ConnectionSettingsFactory::CreateFromType(core::connectionTypes type,
+                                                                     const connection_path_t& conName,
+                                                                     const common::net::HostAndPort& host) {
   IConnectionSettingsRemote* remote = nullptr;
 #ifdef BUILD_WITH_REDIS
   if (type == core::REDIS) {
