@@ -1,5 +1,6 @@
 1.6.0 /
 [Alexandr Topilski]
+- [Memcached, SSDB] Can't save connection setting for memcached. #31
 
 1.5.1 / May 18, 2017
 [Alexandr Topilski]
